# FoodOrderSystem

./: .gitmodules  README.md  foodOrderProgram.sln
foodOrderProgram/: CMakeLists.txt  Customer.cpp  Customer.h  CustomerManager.cpp  CustomerManager.h  FoodOrderSystem.cpp  FoodOrderSystem.h  Manager.cpp  Manager.h  Menu.cpp  Menu.h  MenuManager.cpp  MenuManager.h  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  Review.cpp  Review.h  ReviewManager.cpp  ReviewManager.h  foodOrderProgram.vcxproj  foodOrderProgram.vcxproj.filters  main.cpp
foodOrderProgram/Debug/: vc142.idb
foodOrderProgram/Debug/foodOrderProgram.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  foodOrderProgram.lastbuildstate
foodOrderProgram/tests/: CustomerManagerTest.cpp  CustomerTest.cpp  MenuManagerTest.cpp  MenuTest.cpp  OrderManagerTest.cpp  OrderTest.cpp  ReviewManagerTest.cpp  ReviewTest.cpp
